# entgen

./: Cargo.toml  LICENSE  README.md  docker-compose.yml  entgen.toml  test_config.toml
.github/workflows/: push.yml
db/: init.sql
examples/sqlx-postgres/: Cargo.toml  README.md  docker-compose.yml  entgen.toml
examples/sqlx-postgres/src/: entity.rs  main.rs
examples/sqlx-postgres/src/entity/: bools.rs  nums.rs  strs.rs  times.rs  user.rs  users.rs
src/: cli.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  runner.rs  template.rs
src/db/: converter.rs  information_schema.rs
src/template/: entity.rs  repository.rs  writer.rs
templates/: default_template.txt  entity_template.txt  repository_template.txt
