[package]
name = "entgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres", "uuid" ] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
serde_derive = "1.0"
serde = "1.0"