[package]
name = "entgen"
version = "0.0.1"
edition = "2021"
description = "entity and repository generator for sqlx"
repository = "https://github.com/hikaru7719/entgen"
exclude = [
    "docker-compose.yml",
    "entgen.toml",
    "examples/*",
    "db/*",
]
categories = ["command-line-utilities"]

[[bin]]
name = "entgen"
path = "src/main.rs"

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres", "uuid" ] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
serde_derive = "1.0"
serde = "1.0"
askama = "0.10"
clap = { version = "3.1.15", features = ["derive"] }
log = "0.4.0"
env_logger = "0.8.4"